# hierarchical-data-and-you

./: .gitignore  READMD.md  db.sqlite3  pyproject.toml
customuser/: models.py
filecabinet/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
filecabinet/migrations/: 0001_initial.py  0002_auto_20200611_2100.py  0002_auto_20200612_2006.py  0003_auto_20200612_2033.py  0004_remove_file_user.py
filecabinet/templates/: base.html  index.html
hierarchicaldata/: settings.py  urls.py
