[tool.poetry]
name = "todo-backend-hierarchical-data"
version = "0.1.0"
description = ""
authors = ["Kano Marvel <knmarvel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
flake8 = "^3.8.3"
django-mptt = "^0.11.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
